feat: improved functionality

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <header>
         <div class="headline">
           <h1 id="find-your-film-area">Find your film</h1>
-          <p id="my-watchlist-area"><a href="wathlist.html">My Watchlist</a></p>
+          <p id="my-watchlist-area"><a href="#">My Watchlist</a></p>
         </div>
         <form action="" id="search">
           <div id="search-bar">
@@ -39,14 +39,14 @@
           </div>
         </form>
       </header>
-      <div class="results-area">
+      <div class="results-area" id="first-area">
         <div id="results">
           <!-- <div class="test">something1</div>
           <div class="test">something2</div>
           <div class="test">something3</div> -->
         </div>
       </div>
-      <div class="results-area">
+      <div class="results-area" id="second-area">
         <div id="results-added"></div>
       </div>
     </div>
